<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>nav2_loopback_sim</name>
  <version>0.0.0</version>
  <description>This ROS package offers a simplified Gazebo replacement, 
                focusing on sending robot velocity commands to TF as odometry, 
                facilitating high-level behavioral testing without the complexity of full simulation</description>
  <maintainer email="smitd@umd.edu">smit</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
